improve supported_crs implementation
